<resources>
    <string name="app_name">Gemini</string>
    <string name="todo">TODO</string>
    <string name="gemini">GEMINI</string>
    <string name="images">IMAGES</string>
    <string name="videos">VIDEOS</string>
    <string name="audios">AUDIOS</string>
    <string name="documents">OTHERS</string>
    <string name="check_duplicates">CHECK DUPLICATES</string>
    <string name="media">Media</string>
    <string name="selected_0">Selected: 0</string>
    <string name="there_are_no_more_duplicate">There are no more duplicate</string>
    <string name="remove">Remove</string>
    <string name="file_size">File size</string>
    <string name="filename">Filename</string>
    <string name="last_modification">Last modification</string>
</resources>