<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/file"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/filename"
        android:textColor="@color/white"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_baseline_file_download_done_24"/>

    <TextView
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/file_size"
        android:textColor="@color/white"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_baseline_disc_full_24"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/white"
        android:text="@string/last_modification"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_baseline_calendar_today_24"/>

</LinearLayout>