<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="myapp.gemini.duplicates.Algorithms.Duplicate" >

    <androidx.cardview.widget.CardView
        android:id="@+id/menuBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:id="@+id/menuView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="17dp">

            <TextView
                android:id="@+id/mediaFiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:drawableStart="@drawable/ic_baseline_menu_24"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:onClick="mediaMenu"
                android:paddingHorizontal="15dp"
                android:text="@string/media"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <CheckBox
                android:id="@+id/selectAllFiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="15dp"
                android:buttonTint="@color/white"
                android:gravity="center"
                android:layoutDirection="rtl"
                android:paddingStart="20dp"
                android:text="@string/selected_0"
                android:textColor="@color/white"
                android:textSize="21sp"
                tools:ignore="RelativeOverlap,RtlSymmetry" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:indeterminate="true"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/removeBar"
        android:layout_below="@+id/menuBar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/menuBar">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/checked"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="250dp"
            android:src="@drawable/checked" />

        <TextView
            android:id="@+id/textEmptyView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="50dp"
            android:text="@string/there_are_no_more_duplicate"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/removeBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:id="@+id/removeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp">

            <TextView
                android:id="@+id/removeFiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_delete_24"
                android:drawablePadding="15dp"
                android:text="@string/remove"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>