<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="myapp.gemini.duplicates.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:alpha="0.57"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/gemini"
        android:letterSpacing="0.25"
        android:textColor="@color/white"
        android:textSize="55sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title1"
        android:layout_above="@+id/title2"
        android:columnCount="2"
        android:rowCount="2">

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/white"
            android:id="@+id/duplicateImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="35dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/images"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/ic_baseline_image_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/imagesText"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/imagesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/images"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:paddingBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/images" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/white"
            android:id="@+id/duplicateVideos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="35dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/videos"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/ic_baseline_videocam_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/videosText"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/videosText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/videos"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:paddingBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/videos"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/white"
            android:id="@+id/duplicateAudios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="85dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/audios"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/ic_baseline_audiotrack_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/audiosText"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/audiosText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audios"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:paddingBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/audios" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/white"
            android:id="@+id/duplicateFiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="85dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/documents"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/ic_baseline_article_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/documentsText"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/documentsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/documents"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:paddingBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/documents"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/check_duplicates"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:letterSpacing="0.15"
        android:textStyle="bold"
        android:layout_alignParentBottom="true" />

</RelativeLayout>